--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/x-data-grid": "^5.6.1",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
+    "firebase": "^9.6.8",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "source-map-resolve": "^0.6.0",
+    "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
