--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "source-map-resolve": "^0.6.0",
+    "styled-components": "^5.3.3",
     "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
